--- a/dontdisturbthecoder.tex
+++ b/dontdisturbthecoder.tex
@@ -47,11 +47,11 @@
 \begin{LARGE}
 \textbf{Achtung!}
 
-\textbf{Tief denkender Entwickler!}
+\textbf{Tief denkende Entwicklerin!}
 \end{LARGE}
 
-\begin{Large}Wenn dieser Entwickler kaum reagiert, einen geistesabwesenden
-Gesichtsausdruck und Kopfhörer auf den Ohren hat, jongliert er 
+\begin{Large}Wenn diese Entwicklerin kaum reagiert, einen geistesabwesenden
+Gesichtsausdruck und Kopfhörer auf den Ohren hat, jongliert sie 
 mit Algorithmen und Datenstrukturen im Kopf.
 
 Die kleinste Unterbrechung erfordert danach min. 15 Minuten, um den 
