--- a/dontdisturbthecoder.tex
+++ b/dontdisturbthecoder.tex
@@ -47,11 +47,11 @@
 \begin{LARGE}
 \textbf{Achtung!}
 
-\textbf{Tief denkende Entwicklerin!}
+\textbf{Tief denkendes Entwicklerchen!}
 \end{LARGE}
 
-\begin{Large}Wenn diese Entwicklerin kaum reagiert, einen geistesabwesenden
-Gesichtsausdruck und Kopfhörer auf den Ohren hat, jongliert sie 
+\begin{Large}Wenn dieses Entwicklerchen kaum reagiert, einen geistesabwesenden
+Gesichtsausdruck und Kopfhörer auf den Ohren hat, jongliert es 
 mit Algorithmen und Datenstrukturen im Kopf.
 
 Die kleinste Unterbrechung erfordert danach min. 15 Minuten, um den 
